--- a/index.css
+++ b/index.css
@@ -5,3 +5,19 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: lightgreen;
+}
+
+.container {
+  width: 850px;
+  background: whitesmoke;
+  padding: 30px 35px 35px;
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
