--- a/index.css
+++ b/index.css
@@ -21,3 +21,13 @@ body {
   border-radius: 15px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
+
+.container h2 {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.container .wrapper {
+  display: flex;
+  margin: 0;
+}
