--- a/index.css
+++ b/index.css
@@ -29,5 +29,78 @@ body {
 
 .container .wrapper {
   display: flex;
-  margin: 0;
+  margin: 20px 0;
+  min-height: 335px;
+}
+
+.wrapper .editor-panel {
+  width: 300px;
+  padding: 15px 20px;
+  border-radius: 5px;
+  border: 1px solid red;
+}
+
+.editor-panel .title {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+
+.editor-panel .options {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.editor-panel button {
+  cursor: pointer;
+  height: 40px;
+  font-size: 14px;
+  color: navy;
+  margin-bottom: 8px;
+  border-radius: 3px;
+  background: #fff;
+  border: 1px solid #aaa;
+}
+
+.editor-panel button:hover {
+  background: #f5f5f5;
+}
+
+.editor-panel .filter button {
+  width: calc(100% / 2 - 4px);
+}
+
+.filter button.active {
+  color: #fff;
+  background: navy;
+}
+
+.filter .slider {
+  margin-top: 12px;
+}
+
+.filter .slider .filter-info {
+  display: flex;
+  color: #393939;
+  font-size: 14px;
+  justify-content: space-between;
+}
+
+.filter .slider input {
+  width: 100%;
+  height: 5px;
+}
+
+.editor-panel .rotate {
+  margin-top: 17px;
+}
+
+.editor-panel .rotate button {
+  width: calc(100% / 4 - 5px);
+}
+
+.rotate button:nth-child(3),
+.rotate button:nth-child(4) {
+  font-size: 18px;
 }
