--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ body {
 
 .container .wrapper {
   display: flex;
+  justify-content: space-evenly;
   margin: 20px 0;
   min-height: 335px;
 }
@@ -37,7 +38,7 @@ body {
   width: 300px;
   padding: 15px 20px;
   border-radius: 5px;
-  border: 1px solid red;
+  border: 1px solid #d9d9d9;
 }
 
 .editor-panel .title {
@@ -46,7 +47,8 @@ body {
   margin-bottom: 12px;
 }
 
-.editor-panel .options {
+.editor-panel .options,
+.controls {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -56,7 +58,7 @@ body {
   cursor: pointer;
   height: 40px;
   font-size: 14px;
-  color: navy;
+  color: #393939;
   margin-bottom: 8px;
   border-radius: 3px;
   background: #fff;
@@ -73,7 +75,7 @@ body {
 
 .filter button.active {
   color: #fff;
-  background: navy;
+  background: #0275d8;
 }
 
 .filter .slider {
@@ -103,4 +105,73 @@ body {
 .rotate button:nth-child(3),
 .rotate button:nth-child(4) {
   font-size: 18px;
+}
+
+.wrapper .preview-img {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+.preview-img img {
+  max-width: 590px;
+  max-height: 335px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.controls button {
+  cursor: pointer;
+  padding: 11px 20px;
+  font-size: 14px;
+  border-radius: 3px;
+  background: #198754;
+  color: #fff;
+  border: 1px solid #6c7570;
+}
+
+.controls .reset-filter {
+  background: #dc3545;
+}
+
+.controls .choose-img {
+  background: #6c7570;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 760px) {
+  .container {
+    padding: 25px;
+  }
+
+  .container .wrapper {
+    flex-wrap: wrap-reverse;
+  }
+
+  .wrapper .editor-panel {
+    width: 100%;
+  }
+
+  .wrapper .preview-img {
+    width: 100%;
+    margin: 0 0 15px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .controls button {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .controls .row {
+    width: 100%;
+  }
+
+  .controls .row .save-img {
+    margin-left: 0;
+  }
 }
